force-app/main/default/objects/PricebookEntry/fields/Price_Book_Custom__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field has been created to have a customised related list</description>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Pre Purchased Hours Rate</relationshipLabel>
    <relationshipName>Price_Book_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>