force-app/main/default/objects/PricebookEntry/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <formula>TEXT(Product2.Resource_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resource Type</label>
    <type>Text</type>
</CustomField>