force-app/main/default/objects/PricebookEntry/fields/Service_Time__c.field-meta.xml
<CustomField>
    <fullName>Service_Time__c</fullName>
    <formula>TEXT(Product2.Service_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Time</label>
    <type>Text</type>
</CustomField>