force-app/main/default/objects/PricebookEntry/fields/Usage_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Usage_per_hour__c</fullName>
    <label>Usage per hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>